# multi-agent-orchestrator

agent-platform/: pyproject.toml
agent-platform/backend/: main.py
agent-platform/backend/agents/: integration.py
agent-platform/backend/api/: routes.py  schemas.py
agent-platform/backend/config/: settings.py
agent-platform/backend/observability/: monitor.py
agent-platform/backend/orchestration/: planner.py
agent-platform/backend/routing/: router.py
agent-platform/promts/: hospital_agents_prompts.md  multi_agent_prompts.md
docs/: ARCHITECTURE.md
docs/techs/: TECHNICAL_ARCHITECTURE.md
