[project]
name = "agent-platform"
version = "0.1.0"
description = "Multi-agent orchestration backend"
authors = [
    { name = "Emanuel", email = "lejiei@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["fastapi (>=0.135.1,<0.136.0)", "uvicorn (>=0.41.0,<0.42.0)", "pydantic (>=2.12.5,<3.0.0)", "python-dotenv (>=1.2.2,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"